--- a/arch/arm64/configs/exynos9610-a50_core_defconfig
+++ b/arch/arm64/configs/exynos9610-a50_core_defconfig
@@ -405,13 +405,13 @@ CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_ANXIETY=y
-CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_ZEN is not set
-# CONFIG_DEFAULT_ANXIETY is not set
+CONFIG_DEFAULT_ANXIETY=y
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_IOSCHED="anxiety"
 CONFIG_MQ_IOSCHED_DEADLINE=y
 CONFIG_MQ_IOSCHED_KYBER=y
 # CONFIG_IOSCHED_BFQ is not set
@@ -586,9 +586,9 @@ CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
 # CONFIG_HZ_100 is not set
 # CONFIG_HZ_250 is not set
-# CONFIG_HZ_300 is not set
-CONFIG_HZ_1000=y
-CONFIG_HZ=1000
+CONFIG_HZ_300=y
+# CONFIG_HZ_1000 is not set
+CONFIG_HZ=300
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_SUPPORTS_DEBUG_PAGEALLOC=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
@@ -637,7 +637,7 @@ CONFIG_HPA=y
 # CONFIG_IDLE_PAGE_TRACKING is not set
 CONFIG_FRAME_VECTOR=y
 # CONFIG_PERCPU_STATS is not set
-CONFIG_VM_MAX_READAHEAD_KB=512
+CONFIG_VM_MAX_READAHEAD_KB=128
 CONFIG_VMSTAT_INTERVAL=10
 CONFIG_INCREASE_MAXIMUM_SWAPPINESS=y
 CONFIG_LARGE_DIRTY_BUFFER=y
