--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -1241,6 +1241,13 @@ config DMI
 	  However, even with this option, the resultant kernel should
 	  continue to boot on existing non-UEFI platforms.
 
+config EUREKA_CUSTOM_DT_NODES
+	bool "Enable Eureka custom DT nodes"
+	depends on SOC_EXYNOS9610
+	default n
+	help
+	  This option provides some custom DT nodes to be used with dtb.
+
 config BUILD_ARM64_APPENDED_DTB_IMAGE
 	bool "Build a concatenated Image.gz/dtb by default"
 	depends on OF
